Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
12.3
-
None
-
Not for Release Notes
-
Q1/2026 Server Maintenance
Description
mariadbd: /test/main-MDEV-32570-preview_dbg/sql/log_event_server.cc:5731: virtual int Partial_rows_log_event::do_apply_event(rpl_group_info *): Assertion `skip_res == EVENT_SKIP_NOT' failed.
To reproduce :
Generate a binary log which has partial events
Start server by ./mtr --start and apply attached binlog to this server.
Attachments
Issue Links
- is caused by
-
MDEV-32570 Fragment ROW replication events larger than max_packet_size
-
- Closed
-