MDEV-38615: Assertion skip_res == EVENT_SKIP_NOT failed.